# healthcare_readmission

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  README.md  api.py  main.py  preprocessor.pkl  preprocessor_test.pkl  pyproject.toml
app/: dashboard.py  enhanced_dashboard.py
notebooks/: EDA.ipynb  download_data.py
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb
src/: data_preprocessing.py  model_training.py  shap_analysis.py  time_series_analysis.py
