[project]
name = "healthcare-readmission"
version = "2.0.0"
description = "Enhanced healthcare readmission prediction system with time-series analysis, SHAP interpretability, and real-time API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "tqdm>=4.65.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "plotly>=5.17.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
ml-extra = [
    "shap>=0.44.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "statsmodels>=0.14.0",
]
